Fixed Dots being off centered

--- a/assets/css/timeline.css
+++ b/assets/css/timeline.css
@@ -112,7 +112,7 @@
     content: '';
     position: absolute;
     left: 50%;
-    top: 2.1em;
+    top: calc(2.1em + 2px);
     width: 16px;
     height: 16px;
     margin-top: -11px;
